Doc/force-app/main/default/objects/Intapp_Settings__c/Intapp_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds customisation settings used in Triggers and Classes</description>
    <label>Intapp Settings</label>
</CustomObject>