Doc/force-app/main/default/objects/Intapp_Settings__c/fields/Bypass_Account_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Account_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Account Trigger</label>
    <type>Checkbox</type>
</CustomField>