Doc/force-app/main/default/objects/Intapp_Settings__c/fields/Contact_Role_Validation_Exclude_stages__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Validation_Exclude_stages__c</fullName>
    <inlineHelpText>Add values from Proposed stage field on  &quot;Opp&quot; - when the proposed stage is changed from Target Account to any of these stages, the validation would not fire. Add new values separated with a &quot;;&quot;</inlineHelpText>
    <label>Contact Role Validation - Exclude stages</label>
    <type>TextArea</type>
</CustomField>