Doc/force-app/main/default/objects/Intapp_Settings__c/fields/Disable_PIN_Number_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_PIN_Number_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable Pin Number validation in item master product object.</description>
    <label>Disable PIN Number Validation</label>
    <type>Checkbox</type>
</CustomField>