Doc/force-app/main/default/objects/Intapp_Settings__c/fields/Multiple_OPC_Check__c.field-meta.xml
<CustomField>
    <fullName>Multiple_OPC_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked - Validates whether Oppt has multiple OPCs while creating Order Headers</description>
    <inlineHelpText>When checked - Validates whether Oppt has multiple OPCs while creating Order Headers</inlineHelpText>
    <label>Multiple OPC Check</label>
    <type>Checkbox</type>
</CustomField>