Doc/force-app/main/default/objects/Intapp_Settings__c/fields/NS_customer_webhook_sbx__c.field-meta.xml
<CustomField>
    <fullName>NS_customer_webhook_sbx__c</fullName>
    <label>NS Prospect/Customer webhook (SBX)</label>
    <type>Url</type>
</CustomField>